--- a/res/values/pixys_colors.xml
+++ b/res/values/pixys_colors.xml
@@ -22,5 +22,9 @@
     <!-- Fastscroller -->
     <color name="fastscroller_thumb_background_color">@*android:color/accent_device_default_light</color>
 
+    <!-- Hotseat QSB -->
+    <color name="qsb_icon_shadow_color">#20000000</color>
+    <color name="qsb_dark_icon_tint">#ff757575</color>
+
 </resources>
 
